# KidCode

./: main.py  pageFn.py  pyproject.toml  queries.py  searchFn.py
