[tool.poetry]
name = "kidcode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pip = "^21.0.1"
six = "^1.15.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
urllib3 = "^1.26.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
